# vendor_kaihong

./: OAT.xml  README.en.md  README.md  README_zh.md
khdvk-3566b/: config.json  ohos.build  product.gni
khdvk-3566b/audio/: BUILD.gn
khdvk-3566b/audio/arm/: audio_policy_config.xml
khdvk-3566b/audio/arm64/: audio_policy_config.xml
khdvk-3566b/bluetooth/: BUILD.gn  btcli
khdvk-3566b/bluetooth/include/: bt_vendor_brcm.h  userial_vendor.h
khdvk-3566b/bluetooth/include/utils/: Log.h
khdvk-3566b/bluetooth/src/: bt_vendor_brcm.c  hardware.c  upio.c  userial_vendor.c
khdvk-3566b/demo/QRCodeGenerator/: README.md  build-profile.json5  package-lock.json  package.json
khdvk-3566b/demo/QRCodeGenerator/entry/: build-profile.json5
khdvk-3566b/demo/UdpDemo/: build-profile.json5  package-lock.json  package.json
khdvk-3566b/demo/UdpDemo/entry/: build-profile.json5
khdvk-3566b/demo/center_control/: build-profile.json5  package-lock.json  package.json
khdvk-3566b/demo/center_control/entry/: build-profile.json5
khdvk-3566b/hals/audio/: product.gni
khdvk-3566b/hals/wlan/: product.gni
khdvk-3566b/hdf_config/khdf/: Makefile  hdf.hcs
khdvk-3566b/hdf_config/khdf/audio/: codec_config.hcs
khdvk-3566b/hdf_config/khdf/device_info/: device_info.hcs
khdvk-3566b/hdf_config/khdf/hdf_test/: hdf_hcs.hcb
khdvk-3566b/hdf_config/khdf/input/: input_config.hcs
khdvk-3566b/hdf_config/khdf/light/: light_config.hcs
khdvk-3566b/hdf_config/khdf/platform/: rk3566_watchdog_config.hcs  rk3568_uart_config.hcs
khdvk-3566b/hdf_config/khdf/sensor/: sensor_config.hcs
khdvk-3566b/hdf_config/khdf/wifi/: wlan_platform.hcs
khdvk-3566b/hdf_config/uhdf/: hdf.hcs  usb_ecm_acm.hcs
khdvk-3566b/hdf_config/uhdf/media_codec/: codec_component_capabilities.hcs
khdvk-3566b/image_conf/: BUILD.gn
khdvk-3566b/preinstall-config/: BUILD.gn  install_list_capability.json  install_list_permissions.json  uninstall_list.json
khdvk-3566b/resourceschedule/: BUILD.gn
khdvk-3566b/resourceschedule/ressched/: res_sched_config.xml
khdvk-3566b/resourceschedule/soc_perf/: socperf_boost_config.xml  socperf_resource_config.xml
khdvk_3566b/: bundle.json  config.json  porting-khdvk_3566b-on_standard-demo.md  product.gni
khdvk_3566b/audio/: BUILD.gn
khdvk_3566b/audio/arm/: audio_policy_config.xml
khdvk_3566b/etc/: BUILD.gn
khdvk_3566b/hals/audio/: BUILD.gn  product.gni
khdvk_3566b/hdf_config/uhdf/: BUILD.gn  device_info.hcs  usb_ecm_acm.hcs  usb_pnp_device.hcs
khdvk_3566b/image_conf/: system_image_conf.txt  updater_ramdisk_image_conf.txt
khdvk_3566b/preinstall-config/: BUILD.gn  install_list.json  install_list_capability.json  install_list_permissions.json
khdvk_3566b/resourceschedule/: BUILD.gn
khdvk_3566b/resourceschedule/ressched/: res_sched_plugin_switch.xml
khdvk_3566b/resourceschedule/soc_perf/: socperf_boost_config.xml  socperf_resource_config.xml
khdvk_450a/: BUILD.gn  README_zh.md  config.json  fs.yml  ohos.build
khdvk_450a/fs/data/: EULA
khdvk_450a/graphic_config/: product_graphic_lite_config.h
khdvk_450a/hdf_config/: BUILD.gn
khdvk_450a/kernel_configs/: debug.config
khdvk_450a/sample_app/: BUILD.gn  app.cpp
khdvk_450a/sample_app/ui/: image_demo.cpp  ui_demo.cpp  ui_test.h  ui_test_key_input_listener.h
khdvk_450a_xts/: BUILD.gn  config.json  fs.yml  ohos.build
khdvk_450a_xts/kernel_configs/: debug.config
(+48 files in other folders)
