#

import("//build/ohos.gni")
import("//build/ohos/ndk/ndk.gni")

config("bt_warnings") {
  cflags = [
    "-Wall",
    "-Werror",
    "-Wno-switch",
    "-Wno-unused-function",
    "-Wno-unused-parameter",
    "-Wno-unused-variable",
    "-Wno-implicit-function-declaration",
    "-Wno-incompatible-pointer-types",
  ]
}

ohos_prebuilt_etc("BCM43430A1.hcd") {
  source = "//vendor/${product_company}/${product_name}/bluetooth/BCM43430A1.hcd"
  install_images = [ vendor_base_dir ]
  relative_install_dir = "firmware"
  part_name = "kaihong_products"
  install_enable = true
}

ohos_prebuilt_etc("BCM4345C5.hcd") {
  source = "//vendor/${product_company}/${product_name}/bluetooth/BCM4345C5.hcd"
  install_images = [ vendor_base_dir ]
  relative_install_dir = "firmware"
  part_name = "kaihong_products"
  install_enable = true
}

ohos_prebuilt_etc("btcli") {
  source = "//vendor/${product_company}/${product_name}/bluetooth/btcli"
  install_images = [ system_base_dir ]
  relative_install_dir = "../bin"
  part_name = "kaihong_products"
  install_enable = true
}


ohos_shared_library("libbt_vendor") {
  output_name = "libbt_vendor"
  sources = [
    "src/bt_vendor_brcm.c",
    "src/conf.c",
    "src/hardware.c",
    "src/upio.c",
    "src/userial_vendor.c",
  ]

  include_dirs = [
    "include",
    "//base/hiviewdfx/hilog/interfaces/native/innerkits/include",
    "//foundation/communication/bluetooth/services/bluetooth/hardware/include",
  ]

  cflags = [
    "-DUSE_CONTROLLER_BDADDR=TRUE",
    "-DFW_AUTO_DETECTION=TRUE",
    "-DBT_WAKE_VIA_PROC=FALSE",
    "-DSCO_PCM_ROUTING=0",
    "-DSCO_PCM_IF_CLOCK_RATE=1",
    "-DSCO_PCM_IF_FRAME_TYPE=0",
    "-DSCO_PCM_IF_SYNC_MODE=0",
    "-DSCO_PCM_IF_CLOCK_MODE=0",
    "-DPCM_DATA_FMT_SHIFT_MODE=0",
    "-DPCM_DATA_FMT_FILL_BITS=0x03",
    "-DPCM_DATA_FMT_FILL_METHOD=0",
    "-DPCM_DATA_FMT_FILL_NUM=0",
    "-DPCM_DATA_FMT_JUSTIFY_MODE=0",
  ]

  configs = [ ":bt_warnings" ]

  external_deps = [
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
  ]

  install_enable = true
  install_images = [ chipset_base_dir ]

  part_name = "kaihong_products"
  subsystem_name = "kaihong_products"
}
