# Copyright (c) 2022 Shenzhen Kaihong Digital Industry Development Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

declare_args() {
  kh_ui_test = true
}

static_library("demo_app") {
  sources = [ "app.cpp" ]
  defines = []
  deps = [ "//base/hiviewdfx/hilog_lite/frameworks/featured:hilog_static" ]

  include_dirs = [
    "//commonlibrary/utils_lite/include",
    "//foundation/graphic/ui/frameworks",
  ]

  if (kh_ui_test) {
    sources += [ "ui/image_demo.cpp" ]
    defines += [ "UI_TEST" ]
    include_dirs += [ "ui" ]
    deps += [ "//foundation/graphic/ui:ui" ]
  }
}
